--- a/PictureOfAPickle.html
+++ b/PictureOfAPickle.html
@@ -32,7 +32,9 @@
         <nav>Navigation</nav>
         <aside>Aside</aside>
         <main>Main</main>
-        <section>Section</section>
+        <section>
+            <img src="ppikcle.jpg" alt="pickle">
+        </section>
         <article>Article</article>
         <footer>Footer</footer>
     </body>
