--- a/PictureOfAPickle.html
+++ b/PictureOfAPickle.html
@@ -28,15 +28,15 @@
     </head>
     
     <body>
-        <header>Header</header>
-        <nav>Navigation</nav>
-        <aside>Aside</aside>
-        <main>Main</main>
+        <header></header>
+        <nav></nav>
+        <aside></aside>
+        <main></main>
         <section>
             <img src="ppikcle.jpg" alt="pickle">
         </section>
-        <article>Article</article>
-        <footer>Footer</footer>
+        <article></article>
+        <footer></footer>
     </body>
 
     <footer>
