--- a/PictureOfAPickle.html
+++ b/PictureOfAPickle.html
@@ -37,9 +37,9 @@
         </section>
         The Pickle...
         <nav> 
-            With a hat...
-            But it's...
-            Holding a...
+           <p> With a hat...</p>
+            <p>But it's...</p>
+            <p>Holding a...</p>
         </nav>
         <article></article>
         <footer></footer>
