--- a/PictureOfAPickle.html
+++ b/PictureOfAPickle.html
@@ -37,9 +37,9 @@
         </section>
         <h1>The Pickle But...</h1>
         <nav> 
-           <p> With a hat...</p>
-            <p>The pickle is...</p>
-            <p>Holding a...</p>
+          <p> <a href="\\FS-052\studuser$\Gr10\a.reid21\My Documents\GitHub\Promotions-Website-9-14-22\Pickle\With a hat" target="_blank">With a hat...</p> </a>
+          <p> <a href="\\FS-052\studuser$\Gr10\a.reid21\My Documents\GitHub\Promotions-Website-9-14-22\Pickle\But its" target="_blank">The pickle is...</p> </a>
+          <p>Holding a...</p>
         </nav>
         <article></article>
         <footer></footer>
