--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
         </select></p>
         
         <button onclick="myFunction()">
-        click me
+        Click Me!
         </button>
 
         <script>
             function myFunction() {
-                document.getElementById("attributes").
+                document.getElementById("attributes").className
             }
         </script>
         <nav></nav>
